# rapi

./: .gitignore  Cargo.toml  LICENSE  README.md
rapi-server/: Cargo.toml
rapi-server/migrations/: 20211225100015_user_init.sql  20220110022604_add_group.sql  20220110062107_add_group_title_index.sql
rapi-server/src/: main.rs
rapi-server/src/auth/: controller.rs  error.rs  jwt_middle.rs  jwt_token.rs  mod.rs  model.rs  service.rs  vo.rs
rapi-server/src/auth/vo/: mod.rs  token.rs
rapi-server/src/core/: db.rs  error.rs  mod.rs  result.rs  server.rs
rapi-server/src/group/: controller.rs  mod.rs  model.rs  service.rs  vo.rs
rapi-server/src/utils/: jwt_middle.rs  mod.rs  token.rs
rapi-web/: .env.development  index.html
rapi-web/mock/: _createProductionServer.ts
rapi-web/src/api/system/: user.ts
rapi-web/src/enums/: httpEnum.ts
rapi-web/src/router/: index.ts  router-guards.ts
rapi-web/src/router/modules/: dashboard.ts
rapi-web/src/store/modules/: asyncRoute.ts
rapi-web/src/utils/http/axios/: index.ts
rapi-web/src/views/login/: index.vue
