[package]
name = "rapi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"     
thiserror = "1"     # 错误处理
dotenv = "0.15.0"
poem = { version = "1.2", features = ["multipart", "anyhow"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower-http = { version = "0.2.0", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

sqlx = { version = "0.5.7" , features = ["mysql", "chrono", "offline", "runtime-tokio-native-tls", "uuid"] }
chrono = "0.4.19"

jsonwebtoken = "7.2.0"
